--- a/parroquiaproject/sitio/templates/horarios.html
+++ b/parroquiaproject/sitio/templates/horarios.html
@@ -7,21 +7,17 @@
 <link rel="stylesheet" href="{% static 'css/styles.css' %}">
 <style>
     .accordion-button {
-        background-color: #D9E7F7 ;
+        background-color: #E8E3D0 ;
     }
 </style>
 {% endblock %}
 
 {% block content %}
 <div class="container my-4">
-    <h2 class="mb-4 d-flex justify-content-between align-items-center">
+    <h2 class="mb-4 text-center">
         Lista de Actividades
-        <div>
-            <button class="btn btn-warning me-2">➕ Añadir</button>
-            <button class="btn btn-primary">🔍 Filtrar</button>
-        </div>
     </h2>
-    <form method="get" class="mb-4">
+    <form method="get" class="mb-4 text-center">
         <select name="dia">
             <option value="">-- Seleccionar día --</option>
             <option value="Lunes" {% if filtros.dia == "Lunes" %}selected{% endif %}>Lunes</option>
@@ -52,7 +48,8 @@
                 {% endfor %}
             </select>
             
-      <button type="submit" class="btn btn-primary">Filtrar</button>
+      <button type="submit" class="btn btn-primary btn-sm">🔍 Filtrar</button>
+      <button class="btn btn-warning btn-sm">➕ Añadir</button>
     </form>
 
     <div class="accordion" id="weeklyAccordion">
@@ -92,8 +89,8 @@
                                     <td>{{ actividad.hora }}</td>
                                     <td>{{ actividad.iglesia.nombre }}</td>
                                     <td>
-                                        <button class="btn btn-sm btn-warning me-1">✏️ Editar</button>
-                                        <button class="btn btn-sm btn-danger">🗑️ Eliminar</button>
+                                        <button class="btn btn-sm btn-warning me-1">✏️</button>
+                                        <button class="btn btn-sm btn-danger">🗑️</button>
                                     </td>
                                 </tr>
                                 {% endfor %}
