--- a/parroquiaproject/sitio/templates/horarios.html
+++ b/parroquiaproject/sitio/templates/horarios.html
@@ -27,20 +27,21 @@
             <option value="Domingo" {% if filtros.dia == "Domingo" %}selected{% endif %}>Domingo</option>
           </select>
           <!-- Categoría -->
-          <select name="categoria" class="form-select">
-            <option value="">-- Selecciona una categoría --</option>
-            {% for c in categorias %}
-            <option value="{{ c.nombre }}" {% if filtros.categoria == c.nombre %}selected{% endif %}>
-                {{ c.nombre }}
-            </option>
-            {% endfor %}
+            <select name="categoria" >
+                <option value="">-- Selecciona una categoría --</option>
+                {% for c in categorias %}
+                <option value="{{ c }}" {% if filtros.categoria == c %}selected{% endif %}>
+                    {{ c }}
+                </option>
+                {% endfor %}
             </select>
+        
   
             <!-- Parroquia -->
             <select name="parroquia">
                 <option value="">-- Selecciona una parroquia --</option>
                 {% for p in parroquias %}
-                <option value="{{ p.id }}" {% if filtros.parroquia == p.id|stringformat:"s" %}selected{% endif %}>
+                <option value="{{ p.nombre }}" {% if filtros.parroquia == p.nombre %}selected{% endif %}>
                     {{ p.nombre }}
                 </option>
                 {% endfor %}
